--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -267,8 +267,8 @@ jobs:
             then
               curl  https://kvdb.io/WMGAGb51qQNfJwxmqQ4c8a/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
             fi  
-      - destroy-environment:  
-             
+      - destroy-environment  
+            
 
   deploy-frontend:
     docker:
@@ -289,9 +289,9 @@ jobs:
           name: Get backend url
           command: |
             export BACKEND_IP=$(aws ec2 describe-instances \
-            --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filters "Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-            --output text)
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters "Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --output text)
             echo "API_URL = ${API_URL}"
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
             cat frontend/.env
@@ -306,8 +306,8 @@ jobs:
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       # Here's where you will add some code to rollback on failure      
-      - destroy-environment: 
-           
+      - destroy-environment 
+          
 
   deploy-backend:
     docker:
@@ -316,7 +316,7 @@ jobs:
       - checkout
       - add_ssh_keys:
                 # You can get this ID in the section where you registered the SSH Key
-                fingerprints: ["74:c9:22:97:79:b1:38:90:d5:a4:80:af:4a:ba:0d:2f"] 
+                fingerprints: ["24:18:4a:00:d3:99:96:97:24:48:8a:d6:29:ad:2e:7e"] 
       - attach_workspace:
           at: ~/
       - run:
@@ -345,7 +345,7 @@ jobs:
       - destroy-environment:
           
       - revert-migrations:
-               
+                
 workflows:
   default:
     jobs:
