--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -242,18 +242,12 @@ jobs:
 
   run-migrations:
     docker:
-      - image: cimg/python:3.10
+      - image: circleci/node:13.8.0
       
     steps:
       - checkout
-      # - run:
-      #     name: Install deps
-      #     command: |
-      #       apk add --update --no-cache tar gzip nodejs npm aws-cli curl      
       - restore_cache:
           keys: [backend-build]
-      - install_awscli
-      - install_nodejs    
       - run:  
           name: Run Migration
           command: |
@@ -268,10 +262,7 @@ jobs:
             if grep -q "has been executed successfully." ~/project/backend/migrations.txt
             then
               curl  https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
-            else
-            echo "No migrations are pending" 
             fi
-
       - destroy-environment 
    
 
