--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -311,14 +311,15 @@ jobs:
 
   deploy-backend:
     docker:
-      - image: python:3.10-alpine3.16
+      - image: cimg/python:3.10
     steps:
       - checkout
       - add_ssh_keys:
-                # You can get this ID in the section where you registered the SSH Key
-                fingerprints: ["24:18:4a:00:d3:99:96:97:24:48:8a:d6:29:ad:2e:7e"] 
+          fingerprints: ["24:18:4a:00:d3:99:96:97:24:48:8a:d6:29:ad:2e:7e"]
       - attach_workspace:
           at: ~/
+      - install_awscli
+      - install_ansible 
       - run:
           name: Install dependencies
           command: |
