--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -242,16 +242,16 @@ jobs:
 
   run-migrations:
     docker:
-      - image: python:3.7-alpine3.16
+      - image: circleci/node:13.8.0
       
     steps:
       - checkout
       - restore_cache:
           keys: [backend-build]
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update  tar gzip nodejs npm ansible curl
+     # - run:
+      #    name: Install dependencies
+      #    command: |
+      #     apk add --update  tar gzip nodejs npm ansible curl
       - run:  
           name: Run Migration
           command: |
@@ -265,7 +265,7 @@ jobs:
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations.txt
             then
-              curl  https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
+              curl  https://kvdb.io/Et2YY1zaLRkzQYqa567g5d/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
             fi
       - destroy-environment 
    
@@ -311,15 +311,14 @@ jobs:
 
   deploy-backend:
     docker:
-      - image: cimg/python:3.10
+      - image: python:3.10-alpine3.16
     steps:
       - checkout
       - add_ssh_keys:
           fingerprints: ["24:18:4a:00:d3:99:96:97:24:48:8a:d6:29:ad:2e:7e"]
       - attach_workspace:
           at: ~/
-      - install_awscli
-      - install_ansible 
+       
       - run:
           name: Install dependencies
           command: |
