--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -246,12 +246,13 @@ jobs:
       
     steps:
       - checkout
+      
+      #- run:
+      #    name: Install dependencies
+      #    command: |
+      #      apk add --update  tar gzip nodejs npm ansible curl
       - restore_cache:
           keys: [backend-build]
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update  tar gzip nodejs npm ansible curl
       - run:  
           name: Run Migration
           command: |
@@ -289,9 +290,9 @@ jobs:
           name: Get backend url
           command: |
             export BACKEND_IP=$(aws ec2 describe-instances \
-            --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filters "Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-            --output text)
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters "Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --output text)
             echo "API_URL = ${API_URL}"
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
             cat frontend/.env
