--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -315,15 +315,17 @@ jobs:
       - image: python:3.7-alpine3.16
     steps:
       - checkout
-      - add_ssh_keys:
-          fingerprints: ["24:18:4a:00:d3:99:96:97:24:48:8a:d6:29:ad:2e:7e"]
-      - attach_workspace:
-          at: ~/
-      - install_ansible 
       - run:
           name: Install dependencies
           command: |
             apk add --update  tar gzip nodejs npm ansible curl aws-cli
+      - add_ssh_keys:
+          fingerprints: ["24:18:4a:00:d3:99:96:97:24:48:8a:d6:29:ad:2e:7e"]
+      - attach_workspace:
+          at: ~/
+      #- install_ansible 
+      - restore_cache:
+           keys: [frontend-build]
       - run:
           name: Install aws cli
           command: |
