--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -14,10 +14,10 @@
       wait_for_connection:
             timeout: 600
 
-    - name: "install python for Ansible."
-      apt:
-          name: python3
-          update_cache: yes
+  #  - name: "install python for Ansible."
+  #     apt:
+  #        name: python3
+  #        update_cache: yes
   environment:
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"  
     - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
