--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -347,8 +347,57 @@ jobs:
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
       - destroy-environment
-          
       - revert-migrations
+  smoke-test:
+    docker:
+      - image: python:3.10-alpine3.16
+      # Lightweight Docker image 
+    steps:
+      - checkout  
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update  tar gzip nodejs npm ansible curl aws-cli
+      - run:
+          name: Install aws cli
+          command: |
+            pip install awscli 
+      - run:
+          name: Get backend url
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --filters Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
+            --output text)
+      - run:
+          name: Backend smoke test.
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --filters Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \        --output text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}"
+            if curl  "${API_URL}/api/status" | grep "ok"
+            then
+              return 0
+            else
+              return 1
+            fi
+      - run:
+          name: Frontend smoke test.
+          command: |
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+            echo ${URL} 
+            if curl -s ${URL} | grep "Welcome"
+            then
+              return 0
+            else
+              return 1
+            fi            
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}    
                 
 workflows:
   default:
@@ -376,3 +425,5 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]            
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]    
