--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ commands:
           name: Destroy environments
           when: on_fail
           command: |
-             echo "Destroting environment: << parameters.Work_ID >> "
+             echo "Destroying environment: << parameters.Workflow_ID >> "
              aws s3 rm s3://udapeople-<<parameters.Workflow_ID>> --recursive
              aws cloudformation delete-stack --stack-name udapeople-frontend-<< parameters.Workflow_ID >>
              aws cloudformation delete-stack --stack-name udapeople-backend-<< parameters.Workflow_ID >>
