--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -470,4 +470,4 @@ workflows:
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]    
       - cloudfront-update:
-          requires: [smoke-tests]    
+          requires: [smoke-test]    
