--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -248,13 +248,14 @@ jobs:
       
     steps:
       - checkout
-      
+
       #- run:
       #    name: Install dependencies
       #    command: |
       #      apk add --update  tar gzip nodejs npm ansible curl
       - restore_cache:
           keys: [backend-build]
+      - install_awscli
       - run:  
           name: Run Migration
           command: |
