--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -438,7 +438,7 @@ jobs:
       - run:
           name: Get old stack workflow id
           command: |
-            export OldWorkflowID--<<pipeline.parameters.Workflow_ID>>
+            export OldWorkflowID-<<pipeline.parameters.Workflow_ID>>
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
