--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -436,7 +436,7 @@ jobs:
       - attach_workspace:
           at: ~/
       - run:
-          name: Get old stack workflow id
+          name: fetch old stack workflow id
           command: |
             export OldWorkflowID=<<pipeline.parameters.Workflow_ID>>
             echo OldWorkflowID: "${OldWorkflowID}"
