--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -443,7 +443,7 @@ jobs:
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
             echo STACKS
-            echo udapeople-${OldWorkflowID} 
+            echo udapeople-"${OldWorkflowID}" 
       - run:
           name: Remove old environment
           command:  |      
