--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -438,18 +438,16 @@ jobs:
       - run:
           name: fetch old stack workflow id
           command: |
-            export OldWorkflowID=<<pipeline.parameters.Workflow_ID>>
+            export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
-            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
-            echo STACKS
-            echo udapeople-"${OldWorkflowID}" 
+            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+            echo Stack names: "${STACKS[@]}"
+            
       - run:
           name: Remove old environment
           command:  |      
-            
-            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
-            
+            if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
             then
               echo "-----------------Delete Confirmed----------------"
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
@@ -457,7 +455,7 @@ jobs:
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
             else
               echo "----------------Cannot Cleanup-----------------"
-            fi               
+            fi              
           
                 
 workflows:
