--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -451,9 +451,9 @@ jobs:
               echo ${OldWorkflowID}
               echo s3://${OldWorkflowID}
               echo "s3://${OldWorkflowID}"
-              aws s3 rm "s3://${OldWorkflowID}" --recursive
-              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+              #aws s3 rm "s3://${OldWorkflowID}" --recursive
+              #aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+              #aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
             else
               echo "----------------Cannot Cleanup-----------------"
             fi              
