--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -452,8 +452,8 @@ jobs:
               echo s3://${OldWorkflowID}
               echo "s3://${OldWorkflowID}"
               aws s3 rm "s3://${OldWorkflowID}" --recursive
-              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+              aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
+              aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowID}
             else
               echo "----------------Cannot Cleanup-----------------"
             fi              
