--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -417,7 +417,7 @@ jobs:
             apk add --update curl
             pip install awscli
       - run:
-          name: Update cloudfront distribution
+          name: Update the cloudfront distribution
           command: |
             export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
             #echo $OldWorkflowID >> ~\OldWorkflowID.txt
