--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -420,8 +420,8 @@ jobs:
           name: Update the cloudfront distribution
           command: |
             export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
-            #echo $OldWorkflowID >> ~\OldWorkflowID.txt
-            #cat~/OldWorkflowID.txt
+            echo $OldWorkflowID >> ~/OldWorkflowID.txt
+            cat~/OldWorkflowID.txt
             export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
             echo stacks "${STACKS}"
             aws cloudformation deploy \
