--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -437,7 +437,7 @@ jobs:
       - revert-migrations
   cleanup:
     docker:
-      - image: python;3.10.5-alpine3.16
+      - image: python:3.10.5-alpine3.16
     steps:
       - checkout
       - attach_workspace:
